# mcp-demo-gcp

./: README.md
flight-ticket-service/: .dockerignore  .env  Dockerfile  Makefile  README.md  go.mod  go.sum  magefile.go  test-swagger.sh  ticket-data.json
flight-ticket-service/docs/: docs.go  swagger.json  swagger.yaml
flight-ticket-service/src/cmd/server/: server.go
flight-ticket-service/src/handlers/: health.go  ticket.go
flight-ticket-service/src/models/: ticket.go  ticket_test.go
flight-ticket-service/src/services/: firestore.go
flight-ticket-tools/: .dockerignore  Dockerfile  README.md  claude_desktop_config.json  go.mod  magefile.go  main.py  mcp_http_client.py  pyproject.toml  service.yaml  test_http.py
